test(cli): add e2e happy path testing for cli binary (#72)

--- a/.github/axe-linter.yml
+++ b/.github/axe-linter.yml
@@ -5,3 +5,5 @@ exclude:
   - packages/react/CHANGELOG.md
   - packages/react/example/**/*
   - packages/react/cypress/**/*
+  - packages/cli/test/**/*
+  - packages/cli/testutils/**/*
