--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.0-pre.0",
   "description": "Provides a method to integrate axe with webdriverio to inject and analyze web pages using axe",
   "license": "MPL-2.0",
+  "private": true,
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "publishConfig": {
