--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,7 +176,16 @@ jobs:
       - restore_dependency_cache
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
-      - run: npx lerna publish prepatch --no-verify-access --no-git-tag-version --no-push --canary --dist-tag=next --exact --force-publish --yes
+      - run: >- 
+            npx lerna publish prepatch \
+              --no-verify-access \
+              --no-git-tag-version \
+              --no-push \
+              --canary \
+              --dist-tag=next \
+              --exact \
+              --force-publish \
+              --yes
       # Verify that @axe-core/react has all requires files
       - verify_axe_core_react
 
@@ -188,7 +197,10 @@ jobs:
       - restore_dependency_cache
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
-      - run: npx lerna publish --force-publish='*' --yes
+      - run: >-
+          npx lerna publish from-package \
+            --force-publish='*' \
+            --yes
       # Verify that @axe-core/react has all requires files
       - verify_axe_core_react
 
