ci: Have axe-linter ignore the example

--- a/.github/axe-linter.yml
+++ b/.github/axe-linter.yml
@@ -3,7 +3,7 @@ rules:
   html-has-lang: false 
 exclude:
   - packages/react/CHANGELOG.md
-  - packages/react/example/**/*
+  - packages/react/examples/**/*
   - packages/react/cypress/**/*
   - packages/cli/test/**/*
   - packages/cli/testutils/**/*
