ci: run `axe-core-test` on `/^release*/` and master branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,6 +234,11 @@ workflows:
       - axe-core-test:
           requires:
             - lint
+          filters:
+            branches:
+              only:
+              - /^release.*/
+              - master
       - canary_release:
           context: html-tools
           requires:
