ci: run `axe-core-test` on `/^release*/` and master branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,7 +237,7 @@ workflows:
           filters:
             branches:
               only:
-              - /^release.*/
+              - /^release*/
               - master
       - canary_release:
           context: html-tools
