--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,6 +46,7 @@
     "execa": "^4.0.3",
     "mocha": "^5.1.0",
     "node-static": "^0.7.11",
+    "rimraf": "^3.0.2",
     "tempy": "^0.6.0"
   }
 }
