--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ node_modules
 dist
 __tests__
 coverage
-
+.nyc_output
 packages/react/example/build
 packages/react/test/index.js
 packages/react/cypress/screenshots
