--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc",
+    "build": "tsc-silent -p tsconfig.json --suppress @",
     "test": "mocha --timeout 60000 -r ts-node/register 'src/test.ts'",
     "coverage": "nyc npm run test"
   },
@@ -53,6 +53,7 @@
     "source-map-support": "^0.5.19",
     "test-listen": "^1.1.0",
     "ts-node": "^9.1.1",
+    "tsc-silent": "^1.2.1",
     "typescript": "^4.1.4",
     "webdriverio": "^6.12.1"
   },
