--- a/.github/axe-linter.yml
+++ b/.github/axe-linter.yml
@@ -7,3 +7,4 @@ exclude:
   - packages/react/cypress/**/*
   - packages/cli/test/**/*
   - packages/cli/testutils/**/*
+  - packages/webdriverjs/src/test/fixtures/**
