build(webdriverio): add prepare script

--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -14,7 +14,8 @@
     "prebuild": "rimraf dist",
     "build": "tsc-silent -p tsconfig.json --suppress @",
     "test": "mocha --timeout 60000 -r ts-node/register 'src/test.ts'",
-    "coverage": "nyc npm run test"
+    "coverage": "nyc npm run test",
+    "prepare": "npm run build"
   },
   "keywords": [
     "a11y",
