--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,10 +51,12 @@
     "@types/chai": "^4.2.15",
     "@types/chromedriver": "^81.0.0",
     "@types/mocha": "^8.2.1",
+    "@types/mock-fs": "^4.13.0",
     "@types/selenium-webdriver": "^4.0.11",
     "chai": "^4.3.0",
     "execa": "^5.0.0",
     "mocha": "^8.3.0",
+    "mock-fs": "^4.14.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "tempy": "^1.0.0",
