--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -34,7 +34,7 @@
     "express": "^4.16.4",
     "mocha": "^5.2.0",
     "nyc": "^14.1.1",
-    "puppeteer": "^5.3.1",
+    "puppeteer": "9.1.0",
     "sinon": "^7.3.2",
     "source-map-support": "^0.5.9",
     "test-listen": "^1.1.0",
@@ -45,7 +45,7 @@
     "axe-core": "^4.2.0"
   },
   "peerDependencies": {
-    "puppeteer": ">=1.10.0 < 6"
+    "puppeteer": ">=1.10.0 < 9.1.0"
   },
   "engines": {
     "node": ">=6.4.0"
