--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,7 +45,7 @@
     "chromedriver": "^90.0.0",
     "colors": "^1.4.0",
     "commander": "^7.1.0",
-    "selenium-webdriver": "^3.6.0"
+    "selenium-webdriver": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
