--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -69,7 +69,7 @@
     "mocha": "^8.3.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "selenium-webdriver": "^4.0.0-alpha.8",
+    "selenium-webdriver": "^4.0.0-beta.3",
     "sinon": "^9.2.4",
     "test-listen": "^1.1.0",
     "ts-node": "^9.1.1",
