--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -33,7 +33,8 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "test-listen": "^1.1.0",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "nyc": {
     "include": [
