--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -36,6 +36,9 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
+  "peerDependencies": {
+    "playwright": ">= 1.0.0"
+  },
   "nyc": {
     "include": [
       "src/index.ts"
