--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -76,10 +76,10 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "axe-core": "^4.2.0"
+    "axe-core": "^4.2.1"
   },
   "peerDependencies": {
-    "selenium-webdriver": ">= 2.53.1"
+    "selenium-webdriver": "<= 4.0.0-beta.3 || >= 2.53.1"
   },
   "nyc": {
     "include": [
