--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -79,7 +79,7 @@
     "axe-core": "^4.2.1"
   },
   "peerDependencies": {
-    "selenium-webdriver": ">= 2.53.1 <=4.0.0-beta.3"
+    "selenium-webdriver": ">3.0.0-beta  || >=2.53.1 || >4.0.0-alpha"
   },
   "nyc": {
     "include": [
