--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -10,6 +10,9 @@
   "license": "MPL-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
@@ -18,8 +21,8 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "axe-core": "^4.2.0",
-    "playwright": "^1.8.0"
+    "axe-core": "^4.2.2",
+    "playwright": ">= 1.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
