--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "axe-core": "^4.2.2",
-    "playwright": ">= 1.0.0"
+    "playwright": "^1.8.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
