chore(playwright): publish playwright to `npmjs`

--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -10,6 +10,9 @@
   "license": "MPL-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
