--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -60,7 +60,7 @@
     "webdriverio": "^6.12.1"
   },
   "peerDependencies": {
-    "webdriverio": "^6.0.0 || ^5.0.0"
+    "webdriverio": "^7.0.0 || ^6.0.0 || ^5.0.0"
   },
   "nyc": {
     "include": [
