--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -42,7 +42,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "axe-core": "^4.2.3"
+    "axe-core": "^4.2.3-canary.5ab026d"
   },
   "peerDependencies": {
     "puppeteer": ">=1.10.0 <= 10"
