--- a/packages/webdriverjs/tsconfig.json
+++ b/packages/webdriverjs/tsconfig.json
@@ -3,7 +3,7 @@
     "moduleResolution": "node",
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "lib": ["es2020", "dom"],
     "strict": true,
     "pretty": true,
     "sourceMap": true,
