--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,6 +12,10 @@
       "name": "Michael Siek (me@michaelsiek.com)"
     }
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dequelabs/axe-core-npm.git"
+  },
   "license": "MPL-2.0",
   "main": "dist/src/lib/index.js",
   "typings": "dist/src/types.js",
