--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -18,6 +18,10 @@
     "playwright",
     "axe-core"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dequelabs/axe-core-npm.git"
+  },
   "license": "MPL-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
