--- a/packages/reporter-earl/package.json
+++ b/packages/reporter-earl/package.json
@@ -24,6 +24,10 @@
     "rdf"
   ],
   "author": "Wilco Fiers",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dequelabs/axe-core-npm.git"
+  },
   "license": "MPL-2.0",
   "devDependencies": {
     "@types/clone": "^0.1.30",
