--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -7,6 +7,10 @@
       "name": "Michael Siek (me@michaelsiek.com)"
     }
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dequelabs/axe-core-npm.git"
+  },
   "license": "MPL-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
