--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -30,6 +30,7 @@
     "@types/puppeteer": "^1.20.8",
     "@types/sinon": "^7.0.13",
     "@types/test-listen": "^1.1.0",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.4",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
@@ -42,7 +43,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "axe-core": "^4.2.3-canary.5ab026d"
+    "axe-core": "^4.3.2"
   },
   "peerDependencies": {
     "puppeteer": ">=1.10.0 <= 10"
