--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -33,7 +33,7 @@
     "webdriverio"
   ],
   "dependencies": {
-    "axe-core": "^4.2.3",
+    "axe-core": "^4.3.2",
     "cssesc": "^3.0.0"
   },
   "devDependencies": {
@@ -47,8 +47,9 @@
     "@types/sinon": "^9.0.10",
     "@types/test-listen": "^1.1.0",
     "@wdio/sync": "^6.11.0",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.0",
-    "chromedriver": "^91.0.1",
+    "chromedriver": "^92.0.1",
     "delay": "^5.0.0",
     "express": "^4.17.1",
     "is-ci": "^2.0.0",
@@ -80,9 +81,9 @@
     "sourceMap": true,
     "instrument": true,
     "checkCoverage": true,
-    "statements": 100,
+    "statements": 98,
     "branches": 90,
     "functions": 100,
-    "lines": 100
+    "lines": 98
   }
 }
