feat(webdriverio): allow `AxeBuilder` to use different version of axe-core

--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "*.{json,css,md,html}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures"
   }
 }
