--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,4 @@
 packages/cli/src/testutils/*
 packages/cli/src/**/**/*.test.ts
 packages/webdriverjs/src/test/fixtures/*
+packages/webdriverio/fixtures/*
