--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,6 @@
 packages/cli/src/testutils/*
 packages/cli/src/**/**/*.test.ts
 packages/webdriverjs/src/test/fixtures/*
+packages/webdriverio/fixtures/*
 packages/puppeteer/test/fixtures/*
 **/dist/*
