--- a/.eslintignore
+++ b/.eslintignore
@@ -4,3 +4,4 @@ packages/webdriverjs/src/test/fixtures/*
 packages/webdriverio/fixtures/*
 packages/puppeteer/test/fixtures/*
 **/dist/*
+packages/playwright/fixtures/*
