--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -44,9 +44,9 @@
     "@types/is-ci": "^2.0.0",
     "@types/mocha": "^8.2.3",
     "@types/node": "^14.17.9",
-    "@types/sinon": "^9.0.10",
     "@types/test-listen": "^1.1.0",
     "@wdio/sync": "^6.11.0",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures",
     "chai": "^4.3.0",
     "chromedriver": "^92.0.1",
     "delay": "^5.0.0",
@@ -55,7 +55,6 @@
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "sinon": "^9.2.4",
     "source-map-support": "^0.5.19",
     "test-listen": "^1.1.0",
     "ts-node": "^9.1.1",
