--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -36,7 +36,7 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "axe-core": "^4.2.3",
+    "axe-core": "^4.3.2",
     "playwright": "^1.13.1"
   },
   "devDependencies": {
@@ -45,6 +45,7 @@
     "@types/mocha": "^8.2.3",
     "@types/node": "^14.17.9",
     "@types/test-listen": "^1.1.0",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.0",
     "express": "^4.17.1",
     "mocha": "^8.4.0",
@@ -71,9 +72,9 @@
     "sourceMap": true,
     "instrument": true,
     "checkCoverage": true,
-    "statements": 100,
-    "branches": 100,
+    "statements": 95,
+    "branches": 90,
     "functions": 100,
-    "lines": 100
+    "lines": 95
   }
 }
