fix(webdriverio): switch to frames with index as id

--- a/packages/webdriverio/tsconfig.json
+++ b/packages/webdriverio/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "declaration": true,
     "outDir": "dist",
+    "downlevelIteration": true,
     "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"]
