@axe-core/react: include source-maps to dist

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -4,6 +4,7 @@
     "moduleResolution": "node",
     "declaration": true,
     "sourceMap": true,
+    "inlineSources": true,
     "allowJs": false,
     "module": "commonjs",
     "target": "es5",
