chore: only package required dist dir

--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -7,6 +7,9 @@
       "name": "Michael Siek (me@michaelsiek.com)"
     }
   ],
+  "files": [
+    "/dist"
+  ],
   "keywords": [
     "a11y",
     "unit",
