--- a/packages/webdriverio/tsconfig.json
+++ b/packages/webdriverio/tsconfig.json
@@ -11,5 +11,6 @@
     "outDir": "dist",
     "typeRoots": ["node_modules/@types"]
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/test.ts"]
 }
