--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -7,6 +7,9 @@
       "name": "Michael Siek (me@michaelsiek.com)"
     }
   ],
+  "files": [
+    "/dist"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/dequelabs/axe-core-npm.git"
