--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,9 @@ jobs:
             - v2-webdriverjs-npm-{{ checksum "packages/webdriverjs/package-lock.json" }}
       - restore_cache:
           keys:
+            - v2-webdriverjs-npm-example-{{ checksum "packages/webdriverjs/tests/example/package-lock.json" }}
+      - restore_cache:
+          keys:
             - v2-webdriverio-npm-{{ checksum "packages/webdriverio/package-lock.json" }}
       - restore_cache:
           keys:
@@ -77,6 +80,10 @@ jobs:
           paths:
             - packages/webdriverjs/node_modules
       - save_cache:
+          key: v2-webdriverjs-npm-example-{{ checksum "packages/webdriverjs/tests/example/package-lock.json" }}
+          paths:
+            - packages/webdriverjs/tests/example/node_modules
+      - save_cache:
           key: v2-webdriverio-npm-{{ checksum "packages/webdriverio/package-lock.json" }}
           paths:
             - packages/webdriverio/node_modules
@@ -100,6 +107,7 @@ jobs:
             - packages/playwright/node_modules
             - packages/puppeteer/node_modules
             - packages/webdriverjs/node_modules
+            - packages/webdriverjs/tests/example
             - packages/webdriverio/node_modules
             - packages/reporter-earl/node_modules
             - packages/react/node_modules
@@ -137,6 +145,13 @@ jobs:
       - checkout
       - restore_dependency_cache
       - run: npm run coverage --prefix=packages/webdriverjs
+
+  webdriverjs-example:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_dependency_cache
+      - run: npm run test --prefix=packages/webdriverjs/tests/example
 
   webdriverio:
     <<: *defaults
@@ -190,16 +205,16 @@ jobs:
       - restore_dependency_cache
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
-      - run: >- 
-            npx lerna publish prepatch \
-              --no-verify-access \
-              --no-git-tag-version \
-              --no-push \
-              --canary \
-              --dist-tag=next \
-              --exact \
-              --force-publish \
-              --yes
+      - run: >-
+          npx lerna publish prepatch \
+            --no-verify-access \
+            --no-git-tag-version \
+            --no-push \
+            --canary \
+            --dist-tag=next \
+            --exact \
+            --force-publish \
+            --yes
 
   production_release:
     <<: *defaults
@@ -249,8 +264,8 @@ workflows:
           filters:
             branches:
               only:
-              - /^release*/
-              - master
+                - /^release*/
+                - master
       - canary_release:
           context: html-tools
           requires:
@@ -264,7 +279,7 @@ workflows:
             - react
           filters:
             branches:
-              only: 
+              only:
                 - develop
       - production_release:
           context: html-tools
