--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,6 +151,7 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
+      - run: npm install
       - run: npm run test --prefix=packages/webdriverjs/tests/example
 
   webdriverio:
