--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*",
     "packages/react/examples/*",
-    "packages/webdriverjs/tests/*",
+    "packages/webdriverjs/tests/example",
     "axe_core_test"
   ],
   "version": "4.3.2"
