--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
-  "packages": ["packages/*", "packages/react/examples/*", "axe_core_test"],
+  "packages": [
+    "packages/*",
+    "packages/react/examples/*",
+    "packages/webdriverjs/tests/example",
+    "axe_core_test"
+  ],
   "version": "4.3.2"
 }
