--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -61,10 +61,10 @@
     "ts-node": "^9.1.1",
     "tsc-silent": "^1.2.1",
     "typescript": "^4.4.4",
-    "webdriverio": "^7.16.3"
+    "webdriverio": "^7.14.1"
   },
   "peerDependencies": {
-    "webdriverio": "^7.0.0 || ^6.0.0 || ^5.0.0"
+    "webdriverio": "^5 || ^6 ||7 - 7.14.1"
   },
   "nyc": {
     "include": [
