chore: update packages to use  version of ChromeDriver

--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -50,7 +50,7 @@
     "@wdio/sync": "^7.16.3",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.0",
-    "chromedriver": "^96.0.0",
+    "chromedriver": "latest",
     "delay": "^5.0.0",
     "express": "^4.17.1",
     "mocha": "^8.4.0",
