--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,10 @@ version: 2.1
 defaults: &defaults
   docker:
     - image: circleci/node:12-browsers
+  steps:
+    - run:
+        name: Install latest Chrome browser
+        command: npx browser-driver-manager@1.0.4 install chrome --verbose
   working_directory: ~/axe-core-npm
 
 commands:
@@ -58,7 +62,9 @@ jobs:
       - run:
           name: Install top-level dependencies
           command: npm ci
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
+      - run:
+          name: Install matching ChromeDriver version
+          command: npx browser-driver-manager@1.0.4 install chromedriver --verbose
       - save_cache:
           key: v2-root-npm-{{ checksum "package-lock.json" }}
           paths:
