--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,18 +18,12 @@ commands:
           keys:
             - v3-npm-cache-{{ .Environment.CIRCLE_SHA1 }}
 
-  install_chrome_chromedriver:
-    description: 'Install matching Chrome browser and ChromeDriver version'
-    steps:
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
-
 jobs:
   dependencies:
     <<: *defaults
     steps:
       - checkout
       - configure_npm
-      - install_chrome_chromedriver
       - restore_cache:
           keys:
             - v2-root-npm-{{ checksum "package-lock.json" }}
@@ -135,6 +129,7 @@ jobs:
       - restore_dependency_cache
       # Re-build packages, ensuring packages/webdriverjs/dist exists.
       - run: npx lerna run prepare
+      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
       - run: npm run coverage --prefix=packages/cli
 
   puppeteer:
@@ -143,6 +138,7 @@ jobs:
       - checkout
       - restore_dependency_cache
       - run: npm run build --prefix=packages/puppeteer
+      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
       - run: npm run coverage --prefix=packages/puppeteer
 
   webdriverjs:
@@ -150,6 +146,8 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
+      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
+      - run: npm --prefix=packages/webdriverjs run build
       - run: npm run coverage --prefix=packages/webdriverjs
 
   webdriverjs-example:
@@ -165,6 +163,7 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
+      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
       - run: npm run coverage --prefix=packages/webdriverio
 
   reporter-earl:
