--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,7 @@
   "dependencies": {
     "@axe-core/webdriverjs": "^4.4.0",
     "axe-core": "^4.4.1",
-    "chromedriver": "^96.0.0",
+    "chromedriver": "latest",
     "colors": "^1.4.0",
     "commander": "^7.1.0",
     "selenium-webdriver": "^4.0.0"
