--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 defaults: &defaults
   docker:
-    - image: circleci/node:12-browsers
+    - image: cimg/node:16.14-browsers
   working_directory: ~/axe-core-npm
 
 commands:
