add comment image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ version: 2.1
 
 defaults: &defaults
   docker:
+    # using a node14 image instead of a node16 image due to WDIO
+    # @see https://webdriver.io/blog/2021/07/28/sync-api-deprecation/
     - image: cimg/node:14.19-browsers
   working_directory: ~/axe-core-npm
 
