--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  browser-tools: circleci/browser-tools@1.2.4
+
 defaults: &defaults
   docker:
     # using a node14 image instead of a node16 image due to WDIO
@@ -157,9 +160,9 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - run: npm --prefix=packages/webdriverjs run build
-      - run: npm install browser-driver-manager@1.0.4 install chrome chromedriver
-      - run: npx lerna link
       - run: npm run test --prefix=packages/webdriverjs/tests/example
 
   webdriverio:
