--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,7 +134,7 @@ jobs:
       - restore_dependency_cache
       # Re-build packages, ensuring packages/webdriverjs/dist exists.
       - run: npx lerna run prepare
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
+      - run: cd packages/cli && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm run coverage --prefix=packages/cli
 
   puppeteer:
@@ -143,7 +143,7 @@ jobs:
       - checkout
       - restore_dependency_cache
       - run: npm run build --prefix=packages/puppeteer
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
+      - run: cd packages/puppeteer && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm run coverage --prefix=packages/puppeteer
 
   webdriverjs:
@@ -151,7 +151,7 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
+      - run: cd packages/webdriverjs && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm --prefix=packages/webdriverjs run build
       - run: npm run coverage --prefix=packages/webdriverjs
 
@@ -170,7 +170,7 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
+      - run: cd packages/webdriverio && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm run coverage --prefix=packages/webdriverio
 
   reporter-earl:
