--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,6 +135,8 @@ jobs:
       # Re-build packages, ensuring packages/webdriverjs/dist exists.
       - run: npx lerna run prepare
       - run: cd packages/cli && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
+      # lerna link after installing the latest version of chromedriver, as we depend on webdriverJS
+      - run: cd packages/cli && npx lerna link
       - run: npm run coverage --prefix=packages/cli
 
   puppeteer:
