fix(puppeteer,playwright): wait for finishRun to complete before closing the page (#496)
Co-authored-by: jpveooys <66470099+jpveooys@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,7 +134,9 @@ jobs:
       - restore_dependency_cache
       # Re-build packages, ensuring packages/webdriverjs/dist exists.
       - run: npx lerna run prepare
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
+      - run: cd packages/cli && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
+      # lerna link after installing the latest version of chromedriver, as we depend on webdriverJS
+      - run: cd packages/cli && npx lerna link
       - run: npm run coverage --prefix=packages/cli
 
   puppeteer:
@@ -143,7 +145,7 @@ jobs:
       - checkout
       - restore_dependency_cache
       - run: npm run build --prefix=packages/puppeteer
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
+      - run: cd packages/puppeteer && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm run coverage --prefix=packages/puppeteer
 
   webdriverjs:
@@ -151,7 +153,7 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
+      - run: cd packages/webdriverjs && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm --prefix=packages/webdriverjs run build
       - run: npm run coverage --prefix=packages/webdriverjs
 
@@ -170,7 +172,7 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
-      - run: npx browser-driver-manager@1.0.4 install chrome chromedriver
+      - run: cd packages/webdriverio && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm run coverage --prefix=packages/webdriverio
 
   reporter-earl:
