--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,6 +243,20 @@ jobs:
             --force-publish='*' \
             --yes
 
+  # Create a GitHub release.
+  github_release:
+    docker:
+      - image: cimg/go:1.17.1
+    steps:
+      - checkout
+      - run: go get gopkg.in/aktau/github-release.v0
+      - run:
+          name: Download and run GitHub release script
+          command: |
+            curl https://raw.githubusercontent.com/dequelabs/attest-release-scripts/develop/src/node-github-release.sh -s -o ./node-github-release.sh
+            chmod +x ./node-github-release.sh
+            ./node-github-release.sh
+
 workflows:
   version: 2
   build_and_test:
@@ -314,3 +328,6 @@ workflows:
           filters:
             branches:
               only: master
+      - github_release:
+          requires:
+            - production_release
