--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -64,7 +64,7 @@
     "webdriverio": "^7.14.1"
   },
   "peerDependencies": {
-    "webdriverio": "^5 || ^6 ||7 - 7.14.1"
+    "webdriverio": "^5 || ^6 || ^7"
   },
   "nyc": {
     "include": [
