--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,6 +8,9 @@
     "dist/after.js",
     "dist/after.d.ts",
     "dist/after.js.map",
+    "dist/cache.js",
+    "dist/cache.d.ts",
+    "dist/cache.js.map"
     "dist/index.js",
     "dist/index.d.ts",
     "dist/index.js.map"
