--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,27 +45,27 @@
   ],
   "dependencies": {
     "@axe-core/webdriverjs": "^4.4.3",
-    "axe-core": "^4.4.1",
-    "chromedriver": "latest",
+    "axe-core": "^4.4.2",
+    "chromedriver": "^103.0.0",
     "colors": "^1.4.0",
-    "commander": "^7.1.0",
-    "selenium-webdriver": "^4.2.0"
+    "commander": "^9.3.0",
+    "selenium-webdriver": "4.3.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.22",
-    "@types/chromedriver": "^81.0.0",
-    "@types/mocha": "^8.2.3",
+    "@types/chai": "^4.3.1",
+    "@types/chromedriver": "^81.0.1",
+    "@types/mocha": "^9.1.1",
     "@types/mock-fs": "^4.13.1",
-    "@types/selenium-webdriver": "^4.0.16",
-    "chai": "^4.3.0",
+    "@types/selenium-webdriver": "^4.1.1",
+    "chai": "^4.3.6",
     "execa": "^5.1.1",
-    "mocha": "^8.3.0",
-    "mock-fs": "^4.14.0",
+    "mocha": "^10.0.0",
+    "mock-fs": "^5.1.2",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "tempy": "^1.0.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "nyc": {
     "checkCoverage": true,
