--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -39,24 +39,24 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "axe-core": "^4.4.1",
-    "playwright": "^1.16.2"
+    "axe-core": "^4.4.2",
+    "playwright": ">= 1.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.22",
+    "@types/chai": "^4.3.1",
     "@types/express": "^4.17.13",
-    "@types/mocha": "^8.2.3",
-    "@types/node": "^14.17.32",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.3",
     "@types/test-listen": "^1.1.0",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
-    "chai": "^4.3.0",
-    "express": "^4.17.1",
-    "mocha": "^8.4.0",
+    "chai": "^4.3.6",
+    "express": "^4.18.1",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "test-listen": "^1.1.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "playwright": ">= 1.0.0"
