--- a/packages/playwright/tsconfig.json
+++ b/packages/playwright/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "declaration": true,
     "outDir": "dist",
+    "esModuleInterop": true,
     "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"]
