--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -16,33 +16,33 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "mocha",
-    "coverage": "nyc mocha",
+    "test": "mocha 'test/**/*.test.ts'",
+    "coverage": "nyc npm run test",
     "prepublishOnly": "npm run build"
   },
   "author": "Adam Cutler",
   "license": "MPL-2.0",
   "devDependencies": {
-    "@types/chai": "^4.2.22",
+    "@types/chai": "^4.3.1",
     "@types/express": "^4.17.13",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^12.20.36",
-    "@types/sinon": "^7.0.13",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.3",
+    "@types/sinon": "^10.0.12",
     "@types/test-listen": "^1.1.0",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
-    "chai": "^4.3.4",
-    "express": "^4.16.4",
-    "mocha": "^5.2.0",
-    "nyc": "^14.1.1",
+    "chai": "^4.3.6",
+    "express": "^4.18.1",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
     "puppeteer": "^15.0.1",
-    "sinon": "^7.3.2",
-    "source-map-support": "^0.5.20",
+    "sinon": "^14.0.0",
+    "source-map-support": "^0.5.21",
     "test-listen": "^1.1.0",
-    "ts-node": "^10.8.1",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "axe-core": "^4.4.1"
+    "axe-core": "^4.4.2"
   },
   "peerDependencies": {
     "puppeteer": ">=1.10.0 <= 15"
