--- a/packages/webdriverio/tsconfig.json
+++ b/packages/webdriverio/tsconfig.json
@@ -9,8 +9,9 @@
     "sourceMap": true,
     "declaration": true,
     "outDir": "dist",
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "esModuleInterop": true
   },
-  "include": ["src"],
-  "exclude": ["src/test.ts"]
+  "include": ["src", "test/index.ts"],
+  "exclude": ["test/index.ts"]
 }
