--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -57,34 +57,35 @@
     "webdriverjs"
   ],
   "devDependencies": {
-    "@types/chai": "^4.2.22",
-    "@types/chromedriver": "^81.0.0",
+    "@types/chai": "^4.3.1",
+    "@types/chromedriver": "^81.0.1",
     "@types/express": "^4.17.13",
-    "@types/http-server": "^0.10.1",
-    "@types/mocha": "^8.2.3",
-    "@types/node": "^14.17.32",
-    "@types/selenium-webdriver": "^4.0.16",
-    "@types/sinon": "^9.0.10",
+    "@types/http-server": "^0.12.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.3",
+    "@types/selenium-webdriver": "^4.1.1",
+    "@types/sinon": "^10.0.12",
     "@types/test-listen": "^1.1.0",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
-    "chai": "^4.3.0",
+    "chai": "^4.3.6",
     "chaimocha": "^1.10.0",
-    "chromedriver": "latest",
+    "chromedriver": "^103.0.0",
     "delay": "^5.0.0",
     "express": "^4.17.1",
-    "http-server": "^0.12.3",
+    "expresss": "^0.0.0",
+    "http-server": "^14.1.1",
     "is-ci": "^3.0.1",
-    "mocha": "^8.4.0",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "selenium-webdriver": "^4.2.0",
-    "sinon": "^9.2.4",
+    "selenium-webdriver": "^4.3.0",
+    "sinon": "^14.0.0",
     "test-listen": "^1.1.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "axe-core": "^4.4.1"
+    "axe-core": "^4.4.2"
   },
   "peerDependencies": {
     "selenium-webdriver": ">3.0.0-beta  || >=2.53.1 || >4.0.0-alpha"
