--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,7 +18,7 @@
   },
   "license": "MPL-2.0",
   "main": "dist/src/lib/index.js",
-  "typings": "dist/src/types.js",
+  "typings": "dist/src/types.d.ts",
   "bin": {
     "axe": "./dist/src/bin/cli.js"
   },
