--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,6 @@ orbs:
 
 defaults: &defaults
   docker:
-    # using a node14 image instead of a node16 image due to WDIO
-    # @see https://webdriver.io/blog/2021/07/28/sync-api-deprecation/
     - image: cimg/node:16.16.0-browsers
   working_directory: ~/axe-core-npm
 
@@ -168,7 +166,11 @@ jobs:
       - run: npm run test --prefix=packages/webdriverjs/tests/example
 
   webdriverio:
-    <<: *defaults
+    docker:
+      # using a node14 image instead of a node16 image due to WDIO
+      # @see https://webdriver.io/blog/2021/07/28/sync-api-deprecation/
+      - image: cimg/node:14.19-browsers
+    working_directory: ~/axe-core-npm
     steps:
       - checkout
       - restore_dependency_cache
