fix: only set allowedOrigin when needed (#566)
Co-authored-by: Steven Lambert <2433219+straker@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,7 +174,8 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
-      - run: cd packages/webdriverio && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - run: npm run coverage --prefix=packages/webdriverio
 
   reporter-earl:
