fix: only set allowedOrigin when needed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,6 +143,8 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - run: npm run coverage --prefix=packages/webdriverio
 
   reporter-earl:
@@ -190,16 +192,16 @@ jobs:
       - restore_dependency_cache
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
-      - run: >- 
-            npx lerna publish prepatch \
-              --no-verify-access \
-              --no-git-tag-version \
-              --no-push \
-              --canary \
-              --dist-tag=next \
-              --exact \
-              --force-publish \
-              --yes
+      - run: >-
+          npx lerna publish prepatch \
+            --no-verify-access \
+            --no-git-tag-version \
+            --no-push \
+            --canary \
+            --dist-tag=next \
+            --exact \
+            --force-publish \
+            --yes
 
   production_release:
     <<: *defaults
@@ -249,8 +251,8 @@ workflows:
           filters:
             branches:
               only:
-              - /^release*/
-              - master
+                - /^release*/
+                - master
       - canary_release:
           context: html-tools
           requires:
@@ -264,7 +266,7 @@ workflows:
             - react
           filters:
             branches:
-              only: 
+              only:
                 - develop
       - production_release:
           context: html-tools
